--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,17 @@
   height: 50px;
 }
 
+.footer {
+  display: flex;
+  flex-direction: column;
+  background-color: #2AB2D8;
+  color: white;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 15px;
+  padding-top: 15px;
+  font-size: 0.9em;
+}
 .title {
   font-size: 1.5em;
 }
@@ -37,5 +48,14 @@
   padding-bottom: 5px;
   padding-top: 10px;
   font-size: large;
+}
+
+.footer-items {
+  margin: 2px;
+}
+
+.footer-items-bold {
+  margin: 2px;
+  font-weight: bold;
 }
 
