Ajustes de css no formulário

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   height: 110px;
 }
 
+.title {
+  font-size: 1.5em;
+}
+
 .header {
   background-color: #E0E0E0;
   color: white;
@@ -27,6 +31,15 @@
   height: 50px;
 }
 
+.content {
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 5px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: large;
+}
+
 .footer {
   display: flex;
   flex-direction: column;
@@ -38,17 +51,6 @@
   padding-top: 15px;
   font-size: 0.9em;
 }
-.title {
-  font-size: 1.5em;
-}
-
-.content {
-  padding-left: 10%;
-  padding-right: 10%;
-  padding-bottom: 5px;
-  padding-top: 10px;
-  font-size: large;
-}
 
 .footer-items {
   margin: 2px;
@@ -59,3 +61,6 @@
   font-weight: bold;
 }
 
+.submit-button {
+  width: 100%;
+}
