--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,15 @@
   background-color: #2AB2D8;
   color: white;
   align-items: center;
-  padding-left: 10%;
+  padding-left: 24%;
   padding-right: 10%;
   padding-bottom: 5px;
   padding-top: 5px;
   height: 50px;
+}
+
+.menu-item {
+  margin-right: 40px;
 }
 
 .content {
