--- a/src/App.css
+++ b/src/App.css
@@ -34,13 +34,40 @@
   align-items: center;
   padding-left: 24%;
   padding-right: 10%;
-  padding-bottom: 5px;
-  padding-top: 5px;
   height: 50px;
 }
 
 .menu-item {
-  margin-right: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 250px;
+  text-decoration:none;
+  color: white;
+}
+
+.menu-item:hover { 
+  background-color: #40badc;
+  color: white;
+  text-decoration:none;
+}
+
+.menu-item-selected {
+  display: flex;
+  flex-direction: column;
+  background-color: #40badc;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 250px;
+  text-decoration:none;
+  color: white;
+}
+
+.arrow-navigate-menu {
+  width: 20px;
 }
 
 .content {
